# alpha-agent

./: env_example.txt  main.py  pyproject.toml  run_gradio.py
app/: gradio_app.py  main.py
app/api/: routes.py
app/services/: llm_service.py
app/services/agents/: base_agent.py  langgraph_agent.py  visa_checker_agent.py
app/services/core/: browser.py  email_service.py  scheduler.py
app/services/tools/: browser_tools.py  notification_tool.py  screenshot_tool.py  visa_tool.py
app/ui/: gradio_interface.py
